- in option "-rotate" it is now possible to provide a file containing a rotation matrix.
- new function "IS_SELECTED" returns true if array SELECT is unallocated or if an atom is selected (false otherwise). This function is now used in most modes and options.
- fixed a bug in mode "--polycrystal" that stopped the mode just after reading the seed.
- fixed a bug where option "-dislocation loop" would erase all auxiliary properties when introducing a prismatic dislocation loop where new atoms are added to the system. Thanks to Benedikt Eggle-Sievers, Max-Planck-Institut fuer Eisenforschung GmbH, Germany, for pointing out this bug.
- fixed a bug where Cartesian coordinates would sometimes be detected as reduced when the cell is very small. Thanks to Matous Mrovec, ICAMS, Bochum University, Germany, for pointing out this bug.


Beta 0.13.1 (12 January 2024)
-----------------------------
- in mode "--create", fixed a bug that prevented generating tetragonal lattices and nanotubes.


Beta 0.13 (22 December 2023)
----------------------------
- new mode "--match-id" allows to sort atoms from a file, so that their IDs match those from another file.
- mode "--difference" now accepts that the two systems have different numbers of atoms. Atoms that exist in first system but not the second are marked with a new auxiliary property "deleted_atom". Also, if atoms change chemical species between the two files, a new auxiliary property "diff_Z" is created.
- in mode "--rdf", when several files are treated, neighbour list is rebuilt only if atom displacements are larger than skin width dR.
- mode "--rdf" now accepts a single file name, if a single file must be analyzed.
- when writing files in Protein Data Base (*.pdb) format, lines starting with SCALE are not written any more to avoid issues when visualising with OVITO. OVITO was also patched to fix this issue, see their Git commit [https://gitlab.com/stuko/ovito/-/commit/2a5f55736f4b6bdce7c18931a7fb30da84bb6320].